cmake_minimum_required(VERSION 2.8)
set(PROJECT_NAME wfs)
project(PROJECT_NAME)
find_package(Threads)
add_definitions(-Wall -D_REENTRANT -D_GNU_SOURCE -D_UNICODE -g -Os)

include(FindPkgConfig)
pkg_check_modules(FUSE REQUIRED fuse)
include_directories(${FUSE_INCLUDE_DIRS})
link_directories(${FUSE_LIBRARY_DIRS})
add_executable(webfs webfs.cpp)
set_target_properties(webfs PROPERTIES COMPILE_FLAGS "-std=c++1y ${FUSE_CFLAGS_OTHER}")
target_link_libraries(webfs ${FUSE_LIBRARIES})
